tests/miniJava/neg/000191_mutation.MiniJava
class java { public static public int [] java ( ) { return 0 ; } Main ( String [ ] java ) { { } } }
